disallow_selinux/validating_admission_policy_binding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "disallow-selinux-binding"
spec:
  policyName: "disallow-selinux"
  validationActions: [Audit]
